multi-runner-add-tests-brands-ONLY_RUN_ON_BRANDS-modified_for_brand: test 'test_make_deposit_crm' was refactored

--- a/src/test/python/resources/config/default.yml
+++ b/src/test/python/resources/config/default.yml
@@ -106,7 +106,7 @@ trading_account_1_demo_upd:
 trading_account_1_live:
   server: "Live"
   currency: "USD"
-  group: "demo"
+  group: "USD"
   leverage: "100"
 module_clients_filter:
   test_filter: "TestFilterClientsModule"
