multi-runner-add-tests-brands-ONLY_RUN_ON_BRANDS: brands (24btcmarket, marketsplus, solocapitals) were changed

--- a/src/test/python/resources/config/Brands/solocapitlas.yml
+++ b/src/test/python/resources/config/Brands/solocapitlas.yml
@@ -1,2 +1,2 @@
-pretty_name: "Solocapitlas"
-url: "https://solocapitlas.ptscrm.com/"
+pretty_name: "Solocapitals"
+url: "https://solocapitals.ptscrm.com/"
