multi-runner-add-tests-brands-ONLY_RUN_ON_BRANDS: brands were changed

--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -19,7 +19,7 @@ tests_config:
   class: LeadModuleTest
   tests:
 #    - test_create_lead   # Creates and lead. Included in the test_searching_lead_modules test
-#    - test_edit_lead  # Creates a new lead and edits it's data. Validates that the data changed.
+    - test_edit_lead  # Creates a new lead and edits it's data. Validates that the data changed.
     - test_perform_convert_lead   # Creates a lead and converts it to a client
 
 ## - search leads
