--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -1,84 +1,12 @@
 brands:
-# testing environments - old forex
-#- name: forexdev
-#  config_file: forex_dev.yml
-#- name: forexstaging
-#  config_file: forex_staging.yml
-## testing environments - new forex
-#- name: newfxcrm.loc
-#  config_file: newfxcrm.loc.yml
-#- name: newforexdev
-#  config_file: new_forex_dev.yml
-#- name: newforexstaging
-#  config_file: new_forex_staging.yml
-#- name: newforexqa
-#  config_file: new_forex_qa.yml
-### production environments - old forex
-#- name: itrader
-#  config_file: itrader.yml
-#- name: itrader_global
-#  config_file: itrader_global.yml
-#- name: otcapital
-#  config_file: otcapital.yml
-#- name: urf
-#  config_file: urf_financial.yml
-###- name: gmo
-##  config_file: gmo_trading.yml
-#- name: rimarkets
-#  config_file: rimarkets.yml
-#- name: kayafx
-#  config_file: kaya_fx.yml
-## production environmets - new forex
-#- name: uft
-#  config_file: uft.yml
-#- name: brokerz
-#  config_file: brokerz.yml
-#- name: 4xfx
-#  config_file: 4xfx.yml
-#- name: herdos
-#  config_file: herdos.yml
-#- name: ptbanc
-#  config_file: ptbanc.yml
-#- name: royal_cfds
-#  config_file: royal_cfds.yml
-#- name: intelligent_capital
-#  config_file: intelligent_capital.yml
-- name: solid_fx
-  config_file: solid_fx.yml
-#- name: FXMarketPro
-#  config_file: fx_markets_pro.yml
-#- name: q8
-#  config_file: q8.yml
-#- name: 2mercados
-#  config_file: 2mercados.yml
-#- name: axa_markets
-#  config_file: axa_markets.yml
-#- name: aztrades
-#  config_file: aztrades.yml
-#- name: bots
-#  config_file: bots.yml
-#- name: kontofx
-#  config_file: kontofx.yml
-#- name: xtraderfx
-#  config_file: xtraderfx.yml
-#- name: firstindex
-#  config_file: firstindex.yml
-#- name: coinstec
-#  config_file: coinstec.yml
-#- name: swisscci
-#  config_file: swisscci.yml
-#- name: tradospot
-#  config_file: tradospot.yml
-#- name: etoroc
-#  config_file: etoroc.yml
+
+
+
+# production environmets - new forex
+
 #- name: lq-fx
 #  config_file: lq-fx.yml
-#- name: 24btcmarket
-#  config_file: 24btcmarket.yml
-#- name: marketsplus
-#  config_file: marketsplus.yml
-#- name: eu4xsolutions
-#  config_file: eu4xsolutions.yml
+
 #- name: jonesmutual
 #  config_file: jonesmutual.yml
 #- name: hamiltonfordgroup
@@ -99,6 +27,70 @@ brands:
 #  config_file: safemarkets.yml
 #- name: optionstars
 #  config_file: optionstars.yml
+#- name: uft
+#  config_file: uft.yml
+#- name: brokerz
+#  config_file: brokerz.yml
+#- name: 4xfx
+#  config_file: 4xfx.yml
+#- name: herdos
+#  config_file: herdos.yml
+#- name: ptbanc
+#  config_file: ptbanc.yml
+#- name: royal_cfds
+#  config_file: royal_cfds.yml
+#- name: intelligent_capital
+#  config_file: intelligent_capital.yml
+#- name: solid_fx
+#  config_file: solid_fx.yml
+#- name: FXMarketPro
+#  config_file: fx_markets_pro.yml
+#- name: q8
+#  config_file: q8.yml
+- name: 2mercados
+  config_file: 2mercados.yml
+- name: axa_markets
+  config_file: axa_markets.yml
+- name: aztrades
+  config_file: aztrades.yml
+- name: bots
+  config_file: bots.yml
+- name: kontofx
+  config_file: kontofx.yml
+- name: xtraderfx
+  config_file: xtraderfx.yml
+- name: firstindex
+  config_file: firstindex.yml
+- name: coinstec
+  config_file: coinstec.yml
+- name: swisscci
+  config_file: swisscci.yml
+- name: tradospot
+  config_file: tradospot.yml
+- name: etoroc
+  config_file: etoroc.yml
+
+
+# testing environments - new forex
+#- name: newfxcrm.loc
+#  config_file: newfxcrm.loc.yml
+#- name: newforexdev
+#  config_file: new_forex_dev.yml
+#- name: newforexstaging
+#  config_file: new_forex_staging.yml
+#- name: newforexqa
+#  config_file: new_forex_qa.yml
+
+##BLOCKED
+#- name: 24btcmarket
+#  config_file: 24btcmarket.yml
+#- name: marketsplus
+#  config_file: marketsplus.yml
+#- name: eu4xsolutions
+#  config_file: eu4xsolutions.yml
+
+
+
 # Old forex
 #- name: triomarkets
 #  config_file: triomarkets.yml
@@ -136,6 +128,27 @@ brands:
 #  config_file: oinvestsa.yml
 #- name: rimarkets-staging
 #  config_file: rimarkets-staging.yml
+## production environments - old forex
+#- name: itrader
+#  config_file: itrader.yml
+#- name: itrader_global
+#  config_file: itrader_global.yml
+#- name: otcapital
+#  config_file: otcapital.yml
+#- name: urf
+#  config_file: urf_financial.yml
+##- name: gmo
+#  config_file: gmo_trading.yml
+#- name: rimarkets
+#  config_file: rimarkets.yml
+#- name: kayafx
+#  config_file: kaya_fx.yml
+# testing environments - old forex
+#- name: forexdev
+#  config_file: forex_dev.yml
+#- name: forexstaging
+#  config_file: forex_staging.yml
+
 
 
 
