multi-runner-add-tests-brands-ONLY_RUN_ON_BRANDS: EVAL_first_name was changed, time sleep was added

--- a/src/test/python/resources/config/default.yml
+++ b/src/test/python/resources/config/default.yml
@@ -4,7 +4,7 @@ user_name: pandaqa
 crm_password: xUQ7hrr9VF
 otp_secret:
 FirstLeadInfo:
-  EVAL_first_name: "'testqa_' + (''.join(random.sample(string.ascii_uppercase*6, 6)))"
+  EVAL_first_name: "'testqa' + (''.join(random.sample(string.ascii_uppercase*6, 6)))"
   last_name: "DoeA"
   mobile: "8888888"
   fax: "5555"
@@ -62,7 +62,7 @@ client_1:
   client_status_1: "R - New"
   # EVAL_first_name: "'John_' + (datetime.utcnow().strftime('%Y%m%d_%H%M%S'))"
 #  first_name: "John-test" # manual config
-  EVAL_first_name: "'testqa_' + (''.join(random.sample(string.ascii_uppercase*6, 6)))"
+  EVAL_first_name: "'testqa' + (''.join(random.sample(string.ascii_uppercase*6, 6)))"
   last_name: "Doe"
   EVAL_email: "'john_doe_' + (datetime.utcnow().strftime('%Y%m%d_%H%M%S')) + '@pandats.com'"
 #  email: "john_doe_20180823_131412@pandats.com" # manual config
