multi-runner-add-tests-brands-ONLY_RUN_ON_BRANDS-old-forex: file was change for old forex

--- a/src/test/python/resources/config/default.yml
+++ b/src/test/python/resources/config/default.yml
@@ -117,9 +117,11 @@ module_clients_filter:
   fourth_column: "Email *"
   fifth_column: "Client Name"
   sixth_column: "Assigned To *"
-  seventh_column: "Country"
+  seventh_column: "Country *"
+  seventh_column_in_grid: "Country"
   eighth_column: "First Name"
-  ninth_column: "Last Name"
-  tenth_column: "City *"
-  eleventh_column: "Brand"
+  ninth_column: "Last Name *"
+  ninth_column_in_grid: "Last Name"
+  tenth_column: "City"
+  eleventh_column: "Phone"
 
