--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -36,7 +36,7 @@ brands:
 #- name: herdos
 #  config_file: herdos.yml
 #- name: ptbanc
-#  config_file: ptbanc.yml
+##  config_file: ptbanc.yml
 #- name: royal_cfds
 #  config_file: royal_cfds.yml
 #- name: intelligent_capital
@@ -47,28 +47,28 @@ brands:
 #  config_file: fx_markets_pro.yml
 #- name: q8
 #  config_file: q8.yml
-- name: 2mercados
-  config_file: 2mercados.yml
-- name: axa_markets
-  config_file: axa_markets.yml
-- name: aztrades
-  config_file: aztrades.yml
-- name: bots
-  config_file: bots.yml
-- name: kontofx
-  config_file: kontofx.yml
-- name: xtraderfx
-  config_file: xtraderfx.yml
-- name: firstindex
-  config_file: firstindex.yml
-- name: coinstec
-  config_file: coinstec.yml
-- name: swisscci
-  config_file: swisscci.yml
-- name: tradospot
-  config_file: tradospot.yml
-- name: etoroc
-  config_file: etoroc.yml
+#- name: 2mercados
+#  config_file: 2mercados.yml
+#- name: axa_markets
+#  config_file: axa_markets.yml
+#- name: aztrades
+#  config_file: aztrades.yml
+#- name: bots
+#  config_file: bots.yml
+#- name: kontofx
+#  config_file: kontofx.yml
+#- name: xtraderfx
+#  config_file: xtraderfx.yml
+#- name: firstindex
+#  config_file: firstindex.yml
+#- name: coinstec
+#  config_file: coinstec.yml
+#- name: swisscci
+#  config_file: swisscci.yml
+#- name: tradospot
+#  config_file: tradospot.yml
+#- name: etoroc
+#  config_file: etoroc.yml
 
 
 # testing environments - new forex
@@ -116,8 +116,8 @@ brands:
 #  config_file: gmo-dev.yml
 #- name: mtxplus
 #  config_file: mtxplus.yml
-#- name: 24fxm
-#  config_file: 24fxm.yml
+- name: 24fxm
+  config_file: 24fxm.yml
 #- name: stoxmarket
 #  config_file: stoxmarket.yml
 #- name: alphabetfx
