--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -92,62 +92,62 @@ brands:
 
 
 # Old forex
-#- name: triomarkets
-#  config_file: triomarkets.yml
-#- name: ogtrade
-#  config_file: ogtrade.yml
-#- name: fm-fx
-#  config_file: fm-fx.yml
-#- name: brokerxp
-#  config_file: brokerxp.yml
-#- name: finmarket
-#  config_file: finmarket.yml
-#- name: fxpmarkets
-#  config_file: fxpmarkets.yml
-#- name: soarfx
-#  config_file: soarfx.yml
-#- name: highfx
-#  config_file: highfx.yml
-#- name: mlnfx
-#  config_file: mlnfx.yml
-#- name: gmo
-#  config_file: gmo.yml
-#- name: gmo-dev
-#  config_file: gmo-dev.yml
-#- name: mtxplus
-#  config_file: mtxplus.yml
+- name: triomarkets
+  config_file: triomarkets.yml
+- name: ogtrade
+  config_file: ogtrade.yml
+- name: fm-fx
+  config_file: fm-fx.yml
+- name: brokerxp
+  config_file: brokerxp.yml
+- name: finmarket
+  config_file: finmarket.yml
+- name: fxpmarkets
+  config_file: fxpmarkets.yml
+- name: soarfx
+  config_file: soarfx.yml
+- name: highfx
+  config_file: highfx.yml
+- name: mlnfx
+  config_file: mlnfx.yml
+- name: gmo
+  config_file: gmo.yml
+- name: gmo-dev
+  config_file: gmo-dev.yml
+- name: mtxplus
+  config_file: mtxplus.yml
 - name: 24fxm
   config_file: 24fxm.yml
-#- name: stoxmarket
-#  config_file: stoxmarket.yml
-#- name: alphabetfx
-#  config_file: alphabetfx.yml
-#- name: kbcapitals
-#  config_file: kbcapitals.yml
-#- name: oinvestsa
-#  config_file: oinvestsa.yml
-#- name: rimarkets-staging
-#  config_file: rimarkets-staging.yml
-## production environments - old forex
-#- name: itrader
-#  config_file: itrader.yml
-#- name: itrader_global
-#  config_file: itrader_global.yml
-#- name: otcapital
-#  config_file: otcapital.yml
-#- name: urf
-#  config_file: urf_financial.yml
-##- name: gmo
-#  config_file: gmo_trading.yml
-#- name: rimarkets
-#  config_file: rimarkets.yml
-#- name: kayafx
-#  config_file: kaya_fx.yml
+- name: stoxmarket
+  config_file: stoxmarket.yml
+- name: alphabetfx
+  config_file: alphabetfx.yml
+- name: kbcapitals
+  config_file: kbcapitals.yml
+- name: oinvestsa
+  config_file: oinvestsa.yml
+- name: rimarkets-staging
+  config_file: rimarkets-staging.yml
+# production environments - old forex
+- name: itrader
+  config_file: itrader.yml
+- name: itrader_global
+  config_file: itrader_global.yml
+- name: otcapital
+  config_file: otcapital.yml
+- name: urf
+  config_file: urf_financial.yml
+- name: gmo
+  config_file: gmo_trading.yml
+- name: rimarkets
+  config_file: rimarkets.yml
+- name: kayafx
+  config_file: kaya_fx.yml
 # testing environments - old forex
-#- name: forexdev
-#  config_file: forex_dev.yml
-#- name: forexstaging
-#  config_file: forex_staging.yml
+- name: forexdev
+  config_file: forex_dev.yml
+- name: forexstaging
+  config_file: forex_staging.yml
 
 
 
