--- a/src/main/python/ui/crm/model/BrandsXpath/jonesmutual/jonesmutual_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/jonesmutual/jonesmutual_xpath.yml
@@ -1,2 +1,3 @@
+# ATTENTION! KEEP NAMES OF PAGES IN ALPHABETICAL ORDER
 TasksPage:
   pencil_button: "/html/body/app-root/tasks-list/div/div[2]/div/grid/div[2]/div/div[1]/table/tbody/tr[2]/td[18]/div[5]/div/span"
