--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -18,13 +18,13 @@ tests_config:
   directive: reload_configuration
   class: LeadModuleTest
   tests:
-#    - test_create_lead   # Creates and lead. Included in the test_searching_lead_modules test
+##    - test_create_lead   # Creates and lead. Included in the test_searching_lead_modules test
     - test_edit_lead  # Creates a new lead and edits it's data. Validates that the data changed.
     - test_perform_convert_lead   # Creates a lead and converts it to a client
+##
+#### - search leads
 ###
-##### - search leads
-####
-######Clients
+#####Clients
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
   class: SearchingClientsTestCRM
   tests:
@@ -37,41 +37,41 @@ tests_config:
 - module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
   class: AddEventTaskModule
   tests:
-    - test_add_event
+#    - test_add_event
     - test_edit_event
-###
-#####MT4
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
-#  class: TradingAccountCrmTest
-#  tests:
-#    - test_crm_open_trading_account  # open a new trading account
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Check_Password
-#  class: CheckPasswordTestCRM
-#  tests:
-##   - test_check_client_password_crm  # check the client account password
+##
+####MT4
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
+  class: TradingAccountCrmTest
+  tests:
+    - test_crm_open_trading_account  # open a new trading account
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Check_Password
+  class: CheckPasswordTestCRM
+  tests:
+    - test_check_client_password_crm  # check the client account password
 #    - test_check_mt4_password_crm   # check the MT4 account password
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Change_Password
-#  class: ChangePasswordTestCRM
-#  tests:
-##    - test_change_client_password_from_crm  # change a client account password from the crm
-#    - test_change_mt4_password_from_crm  # change an MT4 account password from the crm
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Deposit
-#  class: DepositTestCRM
-#  tests:
-#    - test_make_deposit_crm  # make a deposit into a trading account from the crm
-##    - test_make_deposit_for_client_crm
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Credit_In
-#  class: CreditInTestCRM
-#  tests:
-###    - test_make_credit_in_crm # Test was commented because it needs Client Area functionality but now CA is not configured
-#    - test_make_credit_in_from_crm
-###Other
-#- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
-#  class: CalendarView
-#  tests:
-#    - test_check_day_tab
-##    - test_check_week_tab
-##    - test_check_month_tab
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Change_Password
+  class: ChangePasswordTestCRM
+  tests:
+    - test_change_client_password_from_crm  # change a client account password from the crm
+    - test_change_mt4_password_from_crm  # change an MT4 account password from the crm
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Deposit
+  class: DepositTestCRM
+  tests:
+    - test_make_deposit_crm  # make a deposit into a trading account from the crm
+    - test_make_deposit_for_client_crm
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Credit_In
+  class: CreditInTestCRM
+  tests:
+##    - test_make_credit_in_crm # Test was commented because it needs Client Area functionality but now CA is not configured
+    - test_make_credit_in_from_crm
+##Other
+- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
+  class: CalendarView
+  tests:
+    - test_check_day_tab
+    - test_check_week_tab
+    - test_check_month_tab
 #- module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
 #  class: TabFinancialTransaction
 #  tests:
@@ -79,8 +79,8 @@ tests_config:
 #    - test_check_searching_by_column # Check filters in columns -  all required columns (customer name, date, transaction type, trading account number, transaction number)
 #    - test_check_search_via_button # Check search using search button
 #
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
-#  class: TradingAccountCrmTest
-#  tests:
-#    - test_crm_open_trading_account  # open a new trading account
-#    - test_crm_edit_trading_account  # edit trading account
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
+  class: TradingAccountCrmTest
+  tests:
+    - test_crm_open_trading_account  # open a new trading account
+    - test_crm_edit_trading_account  # edit trading account
