--- a/src/main/python/ui/crm/model/BrandsXpath/jonesmutual_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/jonesmutual_xpath.yml
@@ -5,3 +5,4 @@ FinancialTransactionsPage:
   client_name_element:  "(//td[3]/div/a)[%s]"
   transaction_type_element : "(//*[@id='listBody']//tr/td[5])[%s]"
   transaction_type_field: "(//div/div[1]/ul/li[1]/div/input)[1]"
+  transaction_type_drop_down: "//td[5]/div/div[1]/button"
