--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -27,8 +27,8 @@ brands:
 #  config_file: safemarkets.yml
 #- name: optionstars
 #  config_file: optionstars.yml
-#- name: uft
-#  config_file: uft.yml
+- name: uft
+  config_file: uft.yml
 #- name: brokerz
 #  config_file: brokerz.yml
 #- name: 4xfx
@@ -47,28 +47,28 @@ brands:
 #  config_file: fx_markets_pro.yml
 #- name: q8
 #  config_file: q8.yml
-- name: 2mercados
-  config_file: 2mercados.yml
-- name: axa_markets
-  config_file: axa_markets.yml
-- name: aztrades
-  config_file: aztrades.yml
-- name: bots
-  config_file: bots.yml
-- name: kontofx
-  config_file: kontofx.yml
-- name: xtraderfx
-  config_file: xtraderfx.yml
-- name: firstindex
-  config_file: firstindex.yml
-- name: coinstec
-  config_file: coinstec.yml
-- name: swisscci
-  config_file: swisscci.yml
-- name: tradospot
-  config_file: tradospot.yml
-- name: etoroc
-  config_file: etoroc.yml
+#- name: 2mercados
+#  config_file: 2mercados.yml
+#- name: axa_markets
+#  config_file: axa_markets.yml
+#- name: aztrades
+#  config_file: aztrades.yml
+#- name: bots
+#  config_file: bots.yml
+#- name: kontofx
+#  config_file: kontofx.yml
+#- name: xtraderfx
+#  config_file: xtraderfx.yml
+#- name: firstindex
+#  config_file: firstindex.yml
+#- name: coinstec
+#  config_file: coinstec.yml
+#- name: swisscci
+#  config_file: swisscci.yml
+#- name: tradospot
+#  config_file: tradospot.yml
+#- name: etoroc
+#  config_file: etoroc.yml
 
 
 # testing environments - new forex
