--- a/src/main/python/ui/crm/model/BrandsXpath/mpcrypto_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/mpcrypto_xpath.yml
@@ -14,3 +14,4 @@ FinancialTransactionsPage:
   transaction_type_element : "(//*[@id='listBody']//tr/td[4])[%s]"
   transaction_type_field: "(//td/div/div[1]/ul/li[1]/div/input)[1]"
   transaction_type_drop_down: "//td[4]/div/div[1]/button"
+  modified_time_element: "(//*[@id='listBody']//tr/td[11])[%s]"
