--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -1,4 +1,13 @@
 # ATTENTION! KEEP NAMES OF PAGES IN ALPHABETICAL ORDER
+ClientsPage:
+  client_status_button: "//tr[@id='customAdvanceSearch']//td[3]//span[@class='multiselect-selected-text']"
+  client_status_field: "//tr[@id='customAdvanceSearch']//td[3]//input[@class='form-control multiselect-search']"
+  country_button: "//tr[@id='customAdvanceSearch']//td[8]//span[@class='multiselect-selected-text']"
+  country_field: "//tr[@id='customAdvanceSearch']//td[8]//input[@class='form-control multiselect-search']"
+TasksPage:
+  pencil_button: "/html/body/app-root/tasks-list/div/div[2]/div/grid/div[2]/div/div[1]/table/tbody/tr[2]/td[18]/div[5]/div/span"
+  subject_input: "//tr[@class='tableFilters']//td[15]//input"
+  account_name_input: "//*[@id='host-element']/input"
 FinancialTransactionsPage:
   client_name_element:  "(//td[3]/div/a)[%s]"
   transaction_type_element : "(//*[@id='listBody']//tr/td[5])[%s]"
