new_forex_updating_of_brands_xpath: add brands to Config file

--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -7,14 +7,14 @@ brands:
 #- name: lq-fx
 #  config_file: lq-fx.yml
 
-#- name: jonesmutual
-#  config_file: jonesmutual.yml
+- name: jonesmutual
+  config_file: jonesmutual.yml
 #- name: hamiltonfordgroup
 #  config_file: hamiltonfordgroup.yml
 #- name: baronsvc
 #  config_file: baronsvc.yml
-- name: mpcrypto
-  config_file: mpcrypto.yml
+#- name: mpcrypto
+#  config_file: mpcrypto.yml
 #- name: forexbestmarket
 #  config_file: forexbestmarket.yml
 #- name: newrichmarkets
