--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -7,8 +7,8 @@ brands:
 #- name: lq-fx
 #  config_file: lq-fx.yml
 
-- name: jonesmutual
-  config_file: jonesmutual.yml
+#- name: jonesmutual
+#  config_file: jonesmutual.yml
 #- name: hamiltonfordgroup
 #  config_file: hamiltonfordgroup.yml
 #- name: baronsvc
