new_forex_updating_of_brands_xpath: - additional conditions for getting relevant constants were added

--- a/src/test/python/resources/config/default.yml
+++ b/src/test/python/resources/config/default.yml
@@ -100,6 +100,7 @@ trading_account_1:
   group: "USD"
   demo: "demo"
   leverage: "100"
+  leverage_1_200: "200"
 trading_account_1_demo_upd:
   trading_account_demo: "Demo"
   group: "demo"
@@ -109,6 +110,7 @@ trading_account_1_live:
   currency: "USD"
   group: "USD"
   leverage: "100"
+  trading_account_live_1_200: "200"
 module_clients_filter:
   test_filter: "TestFilterClientsModule"
   first_column: "CRM Id"
