new_forex_updating_of_brands_xpath: change status, currency client for some brands

--- a/src/test/python/resources/config/default.yml
+++ b/src/test/python/resources/config/default.yml
@@ -22,6 +22,7 @@ FirstLeadInfo:
   first_tittle: "tittle test"
   first_lead_source: "Conference"
   first_lead_status: "R - New"
+  first_lead_status_new: "New"
   first_assigned_to: "pandaqa pandaqa"
   first_source_name: "source name test"
   brand:
@@ -64,6 +65,7 @@ client_1:
   client_status_C: "C - New"
   client_status_T: "Test"
   client_status_F: "F - New"
+  client_status_N: ""
   # EVAL_first_name: "'John_' + (datetime.utcnow().strftime('%Y%m%d_%H%M%S'))"
 #  first_name: "John-test" # manual config
   EVAL_first_name: "'testqa' + (''.join(random.sample(string.ascii_uppercase*6, 6)))"
@@ -88,6 +90,7 @@ client_1:
   first_referral:
   first_source_name: "source 1"
   first_currency: "USD"
+  first_currency_BCH: "BCH"
   new_password: "Panda123456"
 event_1:
   type: "Meeting"
@@ -102,6 +105,7 @@ event_1:
 trading_account_1:
   server: "Demo"
   currency: "USD"
+  currency_BCH: "BCH"
   group: "USD"
   demo: "demo"
   leverage: "100"
