--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -23,20 +23,20 @@ brands:
 #  config_file: solocapitlas.yml
 #- name: goldenmarkets
 #  config_file: goldenmarkets.yml
-#- name: safemarkets
-#  config_file: safemarkets.yml
+- name: safemarkets
+  config_file: safemarkets.yml
 #- name: optionstars
 #  config_file: optionstars.yml
 #- name: uft
 #  config_file: uft.yml
 #- name: brokerz
-##  config_file: brokerz.yml
+#  config_file: brokerz.yml
 #- name: 4xfx
 #  config_file: 4xfx.yml
 #- name: herdos
 #  config_file: herdos.yml
-- name: ptbanc
-  config_file: ptbanc.yml
+#- name: ptbanc
+#  config_file: ptbanc.yml
 #- name: royal_cfds
 #  config_file: royal_cfds.yml
 #- name: intelligent_capital
