new_forex_updating_of_brands_xpath: change status, currency client for some brands

--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -23,8 +23,8 @@ brands:
 #  config_file: solocapitlas.yml
 #- name: goldenmarkets
 #  config_file: goldenmarkets.yml
-- name: safemarkets
-  config_file: safemarkets.yml
+#- name: safemarkets
+#  config_file: safemarkets.yml
 #- name: optionstars
 #  config_file: optionstars.yml
 #- name: uft
@@ -82,8 +82,8 @@ brands:
 #  config_file: new_forex_qa.yml
 
 ##BLOCKED
-#- name: 24btcmarket
-#  config_file: 24btcmarket.yml
+- name: 24btcmarket
+  config_file: 24btcmarket.yml
 #- name: marketsplus
 #  config_file: marketsplus.yml
 #- name: eu4xsolutions
