new_forex_updating_of_brands_xpath: - tests were fixed - conditions were added

--- a/src/test/python/resources/config/default.yml
+++ b/src/test/python/resources/config/default.yml
@@ -97,7 +97,12 @@ event_1:
   assign_to: "pandaqa pandaqa"
   priority: "Medium"
   description: "Event Description"
+platforms:
+  platform_MT5: "MT5"
+  platform_MT4: "MT4"
 trading_account_1:
+  platform_MT5: "MT5"
+  platform_MT4: "MT4"
   server: "Demo"
   currency: "USD"
   group: "USD"
