--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -7,8 +7,8 @@ brands:
 #- name: lq-fx
 #  config_file: lq-fx.yml
 
-#- name: jonesmutual
-#  config_file: jonesmutual.yml
+- name: jonesmutual
+  config_file: jonesmutual.yml
 #- name: hamiltonfordgroup
 #  config_file: hamiltonfordgroup.yml
 #- name: baronsvc
@@ -37,10 +37,10 @@ brands:
 #  config_file: herdos.yml
 #- name: ptbanc
 #  config_file: ptbanc.yml
-- name: royal_cfds
-  config_file: royal_cfds.yml
-- name: intelligent_capital
-  config_file: intelligent_capital.yml
+#- name: royal_cfds
+#  config_file: royal_cfds.yml
+#- name: intelligent_capital
+#  config_file: intelligent_capital.yml
 #- name: solid_fx
 #  config_file: solid_fx.yml
 #- name: FXMarketPro
