--- a/src/main/python/ui/crm/model/BrandsXpath/royal_cfds_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/royal_cfds_xpath.yml
@@ -13,3 +13,5 @@ FinancialTransactionsPage:
   transaction_type_field: "//*[@id='customAdvanceSearch']/td[5]/div/div[1]/ul/li[1]/div/input"
   transaction_type_drop_down: "//td[5]/div/div[1]/button"
   modified_time_element: "(//*[@id='listBody']//tr/td[11])[%s]"
+ClientProfilePage:
+  deposit_sum: "//tr[@class='lvtColData'][1]//td[3]"
