--- a/src/main/python/ui/crm/model/BrandsXpath/mpcrypto_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/mpcrypto_xpath.yml
@@ -15,3 +15,5 @@ FinancialTransactionsPage:
   transaction_type_field: "(//td/div/div[1]/ul/li[1]/div/input)[1]"
   transaction_type_drop_down: "//td[4]/div/div[1]/button"
   modified_time_element: "(//*[@id='listBody']//tr/td[11])[%s]"
+ClientProfilePage:
+  deposit_sum: "//tr[@class='lvtColData'][1]//td[3]"
