--- a/src/main/python/ui/crm/model/BrandsXpath/optionstars_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/optionstars_xpath.yml
@@ -14,3 +14,5 @@ FinancialTransactionsPage:
   transaction_type_field: "(//div/div[1]/ul/li[1]/div/input)[1]"
   transaction_type_drop_down: "//*[@id='customAdvanceSearch']/td[4]/div/div[1]/button"
   modified_time_element: "(//*[@id='listBody']//tr/td[12])[%s]"
+ClientProfilePage:
+  deposit_sum: "//tr[@class='lvtColData'][1]//td[3]"
