--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -14,29 +14,29 @@ tests_config:
 #  class: TabLeadsModuleCRM
 #  tests:
 #    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
-  directive: reload_configuration
-  class: LeadModuleTest
-  tests:
-    - test_create_lead   # Creates and lead. Included in the test_searching_lead_modules test
-    - test_edit_lead  # Creates a new lead and edits it's data. Validates that the data changed.
-    - test_perform_convert_lead   # Creates a lead and converts it to a client
-##
-#### - search leads
+#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
+#  directive: reload_configuration
+#  class: LeadModuleTest
+#  tests:
+##    - test_create_lead   # Creates and lead. Included in the test_searching_lead_modules test
+##    - test_edit_lead  # Creates a new lead and edits it's data. Validates that the data changed.
+#    - test_perform_convert_lead   # Creates a lead and converts it to a client
 ###
-####Clients
+##### - search leads
+####
+#####Clients
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
 #  class: SearchingClientsTestCRM
 #  tests:
 #     ## PRECONDITION: - test_perform_convert_lead
 #    - test_make_searching_client_module   # Searches for a client.
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Add_Interaction
-#  class: AddInteraction
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Add_Interaction
+  class: AddInteraction
+  tests:
 #     ## PRECONDITION: - test_perform_convert_lead
 #    - test_add_interaction  # Adds an interaction for a client
-#     # PRECONDITION: - test_perform_convert_lead
-#    - test_interaction_search   # Searches for an interaction for a client. Validates that only one result is returned.
+     # PRECONDITION: - test_perform_convert_lead
+    - test_interaction_search   # Searches for an interaction for a client. Validates that only one result is returned.
 #- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
 #  class: AddEventTaskModule
 #  tests:
