--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -65,7 +65,7 @@ tests_config:
   class: DepositTestCRM
   tests:
     - test_make_deposit_crm  # make a deposit into a trading account from the crm
-##    - test_make_deposit_for_client_crm
+##    - test_make_deposit_for_client_crm    # please keep it as comment
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Credit_In
   class: CreditInTestCRM
   tests:
@@ -81,7 +81,7 @@ tests_config:
 - module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
   class: TabFinancialTransaction
   tests:
-#    - test_check_all_tab_from_financial_transactions
+    - test_check_all_tab_from_financial_transactions
      ## PRECONDITION: No
     - test_check_searching_by_column # Check filters in columns -  all required columns (customer name, date, transaction type, trading account number, transaction number)
      ## PRECONDITION: No
