old_forex_updating_of_brands_xpath: changed tests for old forex

--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -112,14 +112,14 @@ brands:
 #  config_file: highfx.yml
 #- name: mlnfx
 #  config_file: mlnfx.yml
-#- name: gmo
-#  config_file: gmo.yml
+- name: gmo
+  config_file: gmo.yml
 #- name: gmo-dev
 #  config_file: gmo-dev.yml
 #- name: mtxplus
 #  config_file: mtxplus.yml
-- name: 24fxm
-  config_file: 24fxm.yml
+#- name: 24fxm
+#  config_file: 24fxm.yml
 #- name: stoxmarket
 #  config_file: stoxmarket.yml
 #- name: alphabetfx
