--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -3,3 +3,5 @@ FinancialTransactionsPage:
   client_name_element: "(//*[@id='listBody']//tr/td[3])[%s]"
   transaction_type_drop_down: "//td[6]/div/div[1]/button"
   transaction_type_element: "(//*[@id='listBody']//tr/td[6])[%s]"
+LeadViewInfo:
+  convert_lead_module: "//div[@id='sidebar']//tr[3]//a"
