--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -39,32 +39,32 @@ tests_config:
 #  tests:
 #    - test_add_event
 #    - test_edit_event
-##
-####MT4
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
-#  class: TradingAccountCrmTest
-#  tests:
-#    - test_crm_open_trading_account  # open a new trading account
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Check_Password
-#  class: CheckPasswordTestCRM
-#  tests:
-##    - test_check_client_password_crm  # check the client account password
-#    - test_check_mt4_password_crm   # check the MT4 account password
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Change_Password
-#  class: ChangePasswordTestCRM
-#  tests:
-#    - test_change_client_password_from_crm  # change a client account password from the crm
-#    - test_change_mt4_password_from_crm  # change an MT4 account password from the crm
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Deposit
-#  class: DepositTestCRM
-#  tests:
-#    - test_make_deposit_crm  # make a deposit into a trading account from the crm
-#    - test_make_deposit_for_client_crm
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Credit_In
-#  class: CreditInTestCRM
-#  tests:
-###    - test_make_credit_in_crm # Test was commented because it needs Client Area functionality but now CA is not configured
-#    - test_make_credit_in_from_crm
+#
+###MT4
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
+  class: TradingAccountCrmTest
+  tests:
+    - test_crm_open_trading_account  # open a new trading account
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Check_Password
+  class: CheckPasswordTestCRM
+  tests:
+#    - test_check_client_password_crm  # check the client account password
+    - test_check_mt4_password_crm   # check the MT4 account password
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Change_Password
+  class: ChangePasswordTestCRM
+  tests:
+    - test_change_client_password_from_crm  # change a client account password from the crm
+    - test_change_mt4_password_from_crm  # change an MT4 account password from the crm
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Deposit
+  class: DepositTestCRM
+  tests:
+    - test_make_deposit_crm  # make a deposit into a trading account from the crm
+    - test_make_deposit_for_client_crm
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Credit_In
+  class: CreditInTestCRM
+  tests:
+##    - test_make_credit_in_crm # Test was commented because it needs Client Area functionality but now CA is not configured
+    - test_make_credit_in_from_crm
 ##Other
 #- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
 #  class: CalendarView
