--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -3,3 +3,4 @@ FinancialTransactionsPage:
   client_name_element: "(//*[@id='listBody']//tr/td[3])[%s]"
   transaction_type_drop_down: "//td[6]/div/div[1]/button"
   transaction_type_element: "(//*[@id='listBody']//tr/td[6])[%s]"
+  modified_time_element: "(//*[@id='listBody']//tr/td[10])[%s]"
