--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -14,13 +14,13 @@ tests_config:
 #  class: TabLeadsModuleCRM
 #  tests:
 #    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
-  directive: reload_configuration
-  class: LeadModuleTest
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
+#  directive: reload_configuration
+#  class: LeadModuleTest
+#  tests:
 ##    - test_create_lead   # Creates and lead. Included in the test_searching_lead_modules test
 #    - test_edit_lead  # Creates a new lead and edits it's data. Validates that the data changed.
-    - test_perform_convert_lead   # Creates a lead and converts it to a client
+#    - test_perform_convert_lead   # Creates a lead and converts it to a client
 ###
 ##### - search leads
 ####
@@ -72,15 +72,15 @@ tests_config:
 #    - test_check_day_tab
 #    - test_check_week_tab
 #    - test_check_month_tab
-#- module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
-#  class: TabFinancialTransaction
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
+  class: TabFinancialTransaction
+  tests:
 #    - test_check_all_tab_from_financial_transactions
 #    - test_check_searching_by_column # Check filters in columns -  all required columns (customer name, date, transaction type, trading account number, transaction number)
-#    - test_check_search_via_button # Check search using search button
+    - test_check_search_via_button # Check search using search button
 
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
-  class: TradingAccountCrmTest
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
+#  class: TradingAccountCrmTest
+#  tests:
 #    - test_crm_open_trading_account  # open a new trading account
-    - test_crm_edit_trading_account  # edit trading account
+#    - test_crm_edit_trading_account  # edit trading account
