--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -110,10 +110,10 @@ brands:
 #  config_file: soarfx.yml
 #- name: highfx
 #  config_file: highfx.yml
-#- name: mlnfx
-#  config_file: mlnfx.yml
-- name: gmo
-  config_file: gmo.yml
+- name: mlnfx
+  config_file: mlnfx.yml
+#- name: gmo
+#  config_file: gmo.yml
 #- name: gmo-dev
 #  config_file: gmo-dev.yml
 #- name: mtxplus
