old_forex_updating_of_brands_xpath: changed tests for oinvestsa

--- a/src/test/python/resources/config/default.yml
+++ b/src/test/python/resources/config/default.yml
@@ -79,6 +79,8 @@ client_1:
   phone_area_code: 111
   birthday: "1971-01-01"
   country: "Germany"
+  country_sa: "South Africa"
+  first_country_sa: "South Africa"
   first_country: "Germany"
   street: "My street"
   city: "Berlin"
