--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -104,14 +104,14 @@ brands:
 #  config_file: brokerxp.yml
 #- name: finmarket
 #  config_file: finmarket.yml
-- name: fxpmarkets
-  config_file: fxpmarkets.yml
+#- name: fxpmarkets
+#  config_file: fxpmarkets.yml
 #- name: soarfx
 #  config_file: soarfx.yml
 #- name: highfx
 #  config_file: highfx.yml
-- name: mlnfx
-  config_file: mlnfx.yml
+#- name: mlnfx
+#  config_file: mlnfx.yml
 #- name: gmo
 #  config_file: gmo.yml
 #- name: gmo-dev
@@ -126,8 +126,8 @@ brands:
 #  config_file: alphabetfx.yml
 #- name: kbcapitals
 #  config_file: kbcapitals.yml
-#- name: oinvestsa
-#  config_file: oinvestsa.yml
+- name: oinvestsa
+  config_file: oinvestsa.yml
 #- name: rimarkets-staging
 #  config_file: rimarkets-staging.yml
 ## production environments - old forex
