old_forex_updating_of_brands_xpath: changed tests for old forex

--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -126,8 +126,8 @@ brands:
 #  config_file: alphabetfx.yml
 #- name: kbcapitals
 #  config_file: kbcapitals.yml
-- name: oinvestsa
-  config_file: oinvestsa.yml
+#- name: oinvestsa
+#  config_file: oinvestsa.yml
 #- name: rimarkets-staging
 #  config_file: rimarkets-staging.yml
 ## production environments - old forex
@@ -148,8 +148,8 @@ brands:
 # testing environments - old forex
 #- name: forexdev
 #  config_file: forex_dev.yml
-#- name: forexstaging
-#  config_file: forex_staging.yml
+- name: forexstaging
+  config_file: forex_staging.yml
 
 
 
