old_forex_updating_of_brands_xpath: - updating tests and pages

--- a/src/main/python/ui/crm/model/BrandsXpath/itrader_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/itrader_xpath.yml
@@ -1,2 +1,4 @@
 ClientsPage:
   id_client: "//a[contains(text(), 'ACC')]"
+FinancialTransactionsPage:
+  modified_time_element: "(//*[@id='listBody']//tr/td[14])[%s]"
