--- a/src/main/python/ui/crm/model/BrandsXpath/rimarkets_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/rimarkets_xpath.yml
@@ -2,3 +2,7 @@ LeadViewInfo:
   convert_lead_module: "//div[@id='sidebar']//tr[2]//a"
 ClientsPage:
   id_client: "//a[contains(text(), 'ACC')]"
+FinancialTransactionsPage:
+  transaction_type_drop_down: "//td[7]/div/div[1]/button"
+  transaction_type_element: "(//*[@id='listBody']//tr/td[7])[%s]"
+  modified_time_element: "(//*[@id='listBody']//tr/td[14])[%s]"
