--- a/src/main/python/ui/crm/model/BrandsXpath/ogtrade_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/ogtrade_xpath.yml
@@ -1,3 +1,5 @@
 FinancialTransactionsPage:
   client_name_element: "(//*[@id='listBody']//tr/td[4])[%s]"
   modified_time_element: "TBD"
+LeadDetailViewInfo:
+    referral: "//td[contains(text(),'Referral')]//following-sibling::td[1]"
