--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -94,8 +94,8 @@ brands:
 
 
 # Old forex
-- name: triomarkets
-  config_file: triomarkets.yml
+#- name: triomarkets
+#  config_file: triomarkets.yml
 #- name: ogtrade
 #  config_file: ogtrade.yml
 #- name: fm-fx
@@ -110,8 +110,8 @@ brands:
 #  config_file: soarfx.yml
 #- name: highfx
 #  config_file: highfx.yml
-#- name: mlnfx
-#  config_file: mlnfx.yml
+- name: mlnfx
+  config_file: mlnfx.yml
 #- name: gmo
 #  config_file: gmo.yml
 #- name: gmo-dev
